--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <p>15 Nov To 7 Dec</p>
           </div>
           <div class="oraimo">
-            <img class="w-100" src="images/airpods2.avif" alt="" />
+            <img class="w-100" src="images/airpods2.jpg" alt="" />
           </div>
           <div class="sale">
             <p>Oraimo airpods</p>
@@ -222,7 +222,7 @@
             <p>15 Nov To 7 Dec</p>
           </div>
           <div class="macbook">
-            <img class="w-100" src="images/laptop2.avif" alt="" />
+            <img class="w-100" src="images/laptop2.jpg" alt="" />
           </div>
           <div class="mac-sale">
             <p>Macbook pro 2021</p>
@@ -241,10 +241,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/iphone.avif" alt="iphone" />
+                  <img src="images/iphone.jpg" alt="iphone" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/iphone11-2.avif" alt="iphone" />
+                  <img src="images/iphone11-2.jpg" alt="iphone" />
                 </div>
               </div>
             </div>
@@ -257,10 +257,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/vr-glass.avif" alt="vr-glass" />
+                  <img src="images/vr-glass.jpg" alt="vr-glass" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/vr-glass-2.avif" alt="" />
+                  <img src="images/vr-glass-2.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -273,10 +273,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/jbl.avif" alt="jbl-speaker" />
+                  <img src="images/jbl.jpg" alt="jbl-speaker" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/jbl-speaker-2.avif" alt="" />
+                  <img src="images/jbl-speaker-2.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -289,10 +289,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/ps5.avif" alt="ps5" />
+                  <img src="images/ps5.jpg" alt="ps5" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/ps5-2.avif" alt="" />
+                  <img src="images/ps5-2.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -305,10 +305,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/macbook.avif" alt="macbook" />
+                  <img src="images/macbook.jpg" alt="macbook" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/macbook-3.avif" alt="" />
+                  <img src="images/macbook-3.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -321,10 +321,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/airpods-4.avif" alt="airpod" />
+                  <img src="images/airpods-4.jpg" alt="airpod" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/airpods-3.avif" alt="" />
+                  <img src="images/airpods-3.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -337,10 +337,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/headphone-2.avif" alt="headset" />
+                  <img src="images/headphone-2.jpg" alt="headset" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/headphone-3.avif" alt="" />
+                  <img src="images/headphone-3.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -353,10 +353,10 @@
             <div class="flip-card">
               <div class="flip-card-inner">
                 <div class="flip-card-front">
-                  <img src="images/iwatch-back.avif" alt="iwatch" />
+                  <img src="images/iwatch-back.jpg" alt="iwatch" />
                 </div>
                 <div class="flip-card-back">
-                  <img src="images/iwatch-2.avif" alt="" />
+                  <img src="images/iwatch-2.jpg" alt="" />
                 </div>
               </div>
             </div>
@@ -373,7 +373,7 @@
         <h2>Recent News</h2>
         <div>
           <div>
-            <img src="images/spotify.avif" alt="news-1" />
+            <img src="images/spotify.jpg" alt="news-1" />
             <p>January 5, 2023</p>
             <p class="heading">Spotify's New Milestone</p>
             <p>
@@ -383,7 +383,7 @@
             </p>
           </div>
           <div>
-            <img src="images/apple-logo.avif" alt="news-2" />
+            <img src="images/apple-logo.jpg" alt="news-2" />
             <p>January 8, 2023</p>
             <p class="heading">Apple's New Business Tool</p>
             <p>
@@ -394,7 +394,7 @@
             </p>
           </div>
           <div>
-            <img src="images/samsung.avif" alt="news-3" />
+            <img src="images/samsung.jpg" alt="news-3" />
             <p>January 11, 2023</p>
             <p class="heading">Samsung TV</p>
             <p>
